@@ -509,8 +509,9 @@ namespace BOB
 		{
 			// Revert any unapplied changes first.
 			if (UnappliedChanges)
-            {
-				RevertPreview();
+			{
+				// Reset slider values by reassigning the current target item - this will also revert any preview.
+				CurrentTargetItem = CurrentTargetItem;
 				return;
             }
 
